@@ -16,4 +16,8 @@
 	  Code overhaul and clean up performed. Many minor changes. Code simplification completed.
 
 20090910: Added ability to add items to groups from group page. 
+
+20090911: Made a little more space between plots and widget edges.
+
+
 	  
